# scadmill

./: .gitattributes  .gitignore  .npmrc  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  ENGINE_VERSION  LICENSE  PRIVACY.md  PROVENANCE.md  README.md  SECURITY.md  THIRD-PARTY-NOTICES.txt  biome.json  index.html  package.json  playwright.ac4.config.ts  playwright.config.ts  playwright.production-static.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
.github/workflows/: build-openscad-wasm.yml  ci.yml  package-openscad-web-engine.yml
docs/: FAQ.md  RELEASE-NOTES-0.1.0-beta.1.md  RELEASE-NOTES-0.1.0-beta.2.md  RELEASE-NOTES-0.1.0-beta.3.md  RELEASE-ROLLBACK-0.1.0-beta.2.md  RELEASE-ROLLBACK-0.1.0-beta.3.md  RELEASE-ROLLBACK.md  USER-GUIDE.md  WINDOWS-BETA.md
engine-compliance/openscad-2026.06.12/: README.md
owner-gate/: ci-similarity-gate.yml  similarity_gate.py
provenance/: schema.json
provenance/entries/: 2026-07-09-m0-bootstrap.json  2026-07-10-c0-layout-shell.json  2026-07-10-c1-completion.json  2026-07-10-c1-document-tabs.json  2026-07-10-c1-language-core.json  2026-07-10-c12-theme-runtime.json  2026-07-10-c12-theme-schema.json  2026-07-10-c4-native-diagnostics.json  2026-07-10-c8-navigation.json  2026-07-10-m1-native-runtime-console.json  2026-07-10-v06-engine-pin.json  2026-07-11-a7-runtime-pin-enforcement.json  2026-07-11-artifact-location-unicode.json  (+251 more)
scripts/: check-licenses.mjs  check-provenance.mjs  check-source-policy.mjs  check-tracked-blobs.mjs  check-wasm-build-workflow.mjs  generate-third-party-notices.mjs  run-m4-hosted-evidence.mjs  run-m5-m6-packaged-walkthrough.mjs  run-packaged-desktop-evidence.mjs  run-production-static-evidence.mjs  run-viewer-performance-profile.mjs  serve-static-dist.mjs  stage-openscad-wasm-artifact.mjs  verify-tauri-bundle-identity.mjs
spec/: QUESTIONS.md  scadmill-spec-v0.4.md  scadmill-spec-v0.6.md
src/: main.tsx
src/desktop-shell/src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src/desktop-shell/src-tauri/capabilities/: default.json
src/desktop-shell/src-tauri/icons/: icon.icns
src/desktop-shell/src-tauri/src/: ai_http_broker.rs  artifact_storage.rs  associated_files.rs  desktop_settings.rs  engine_version_manager.rs  headless_cli.rs  keychain.rs  lib.rs  main.rs  mcp_stdio.rs  native_menu.rs  project_storage.rs  render_cache.rs  slicer_handoff.rs  tests.rs
src/desktop-shell/src-tauri/tests/: headless_cli.rs  mcp_stdio_cli.rs
src/desktop-shell/src-tauri/windows/: installer-hooks.nsh
src/native-engine/: Cargo.toml
src/native-engine/src/: discovery.rs  lib.rs  parameters.rs  process.rs  project.rs  project_layout.rs  stl.rs
src/native-engine/tests/: engine_pin.rs  export_runtime.rs  formatter_geometry.rs  project_runtime.rs
tests/: setup.ts
website/: README.md  package-lock.json  package.json
(+635 files in other folders)
