[package]
name = "scadmill-native-engine"
version = "0.1.0-beta.1"
edition = "2024"
license = "LicenseRef-Proprietary"
publish = false

[lib]
name = "scadmill_native_engine"
path = "src/lib.rs"

[dependencies]
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
tempfile = "=3.27.0"
thiserror = "=2.0.18"

[target.'cfg(unix)'.dependencies]
libc = "=0.2.186"
