[package]
name = "scadmill-desktop"
version = "0.0.0"
edition = "2024"
license = "LicenseRef-Proprietary"
publish = false
build = "build.rs"

[lib]
name = "scadmill_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "scadmill"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
base64 = "=0.22.1"
keyring = "=4.1.4"
scadmill-native-engine = { path = "../../native-engine" }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
tauri = { version = "=2.11.5", features = [] }
tauri-plugin-dialog = "=2.7.1"
